--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemon": "^1.10.2",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "url": "^0.11.0"
   }
 }
