--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "express": "~4.13.4",
     "express-session": "^1.14.1",
     "express-validator": "^2.20.10",
+    "font-awesome": "^4.7.0",
     "mongoose": "^4.6.1",
     "morgan": "~1.7.0",
-    "nodemon": "^1.10.2",
+    "nodemon": "^1.11.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.0"
