--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.15.1",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^1.3.2",
     "cookie-parser": "~1.4.3",
     "csurf": "^1.9.0",
     "debug": "~2.2.0",
@@ -21,6 +22,8 @@
     "mongoose": "^4.6.1",
     "morgan": "~1.7.0",
     "nodemon": "^1.11.0",
+    "open": "0.0.5",
+    "openurl": "^1.1.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.0"
